Fixing restaurantDto classes